--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-log
-bin/
-out/
-*.db
-*.iml
-.idea/
-.DS_Store
-*.zip
-dist/
+#log
+#bin/
+#out/
+#*.db
+#*.iml
+#.idea/
+#.DS_Store
+#*.zip
+#dist/
