--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-#log
-#bin/
-#out/
-#*.db
-#*.iml
-#.idea/
-#.DS_Store
-#*.zip
-#dist/
+.idea
+bin
+dist
+lib
+out
+testreport
+build.xml
+controlflow.png
+lab*
+LICENSE
+log
+merging*
+redist*
+simple*
+splitting*
